# Pronouns.page-Viewer

./: .gitignore  README.md  pyproject.toml
pronounspageviewer/: __init__.py  __main__.py  page.py  profile.py
