[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pronounspageviewer"
version = "1.0.1"
authors = [
  { name="Joe Greaves" },
]
description = "View a Pronouns.page from its JSON file"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.scripts]
pronounspageviewer = "pronounspageviewer.__main__:main"

[project.urls]
"Homepage" = "https://github.com/Grvs44/Pronouns.page-Viewer"
